# aswrl

./: README.md  policy.pt
analysis/: README_图5_7_5_8_5_9_模板与图注.md  check_indices.py  figure_5_7_network_delay.py  figure_5_8_window_trace.py  figure_5_9_ci_significance.py  jitter_metrics.csv  jitter_metrics.tex  make_tables.py  multimodal_metrics.csv  multimodal_metrics.tex  plot_jitter_compare.py  plot_multimodal_compare.py  plot_single_sync.py  plot_single_sync_sqlite.py  plot_stable_compare.py  rosbag2_sqlite_utils.py  stable_metrics.csv  stable_metrics.tex  table_5_9_stats.csv
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
rl_runs/multimodal_dqn_s0/: dqn_final.pt  dqn_latest.pt
rl_runs/multimodal_smoke/: dqn_final.pt  dqn_latest.pt
src/aswrl_sync/: package.xml  setup.cfg  setup.py
src/aswrl_sync/aswrl_sync/: clock_drift.py  compensation_node.py  formation_controller.py  kalman_sync.py
src/aswrl_sync/aswrl_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/aswrl_sync/aswrl_sync/rl/: export_policy.py  policy.pt  train_dqn.py
src/aswrl_sync/aswrl_sync/rl/outputs/: dqn_final.pt  dqn_latest.pt
src/aswrl_sync/config/: cyclonedds_dog2.xml  cyclonedds_uav1.xml
src/aswrl_sync/config/net_scenarios/: jitter.yaml  multimodal.yaml
src/aswrl_sync/gazebo/models/dog1/: model.sdf
src/aswrl_sync/gazebo/models/dog2/: model.sdf
src/aswrl_sync/gazebo/worlds/: multi_robot.world
src/aswrl_sync/launch/: bringup_dog.launch.py  bringup_uav.launch.py
src/aswrl_sync/scripts/: cleanup_netns.sh
(+23 files in other folders)
