<?xml version="1.0"?>
<package format="3">
  <name>aswrl_sync</name>
  <version>0.1.0</version>
  <description>ASW-RL time synchronization reproduction scaffold (ROS2 Humble + Gazebo Classic 11) with netns + tc netem network emulation.</description>
  <maintainer email="woodward_christopher59484@hotmail.com">Butterfly Dark</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
